# adm

./: .gitattributes  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: quality_check.yaml  reuse.yaml
.reuse/: dep5
src/: error.rs  lib.rs  main.rs  vcs.rs
tests/: test_vcs_git.rs
